--- a/WPF_Elements/MainWindow.xaml
+++ b/WPF_Elements/MainWindow.xaml
@@ -6,31 +6,12 @@
         xmlns:local="clr-namespace:WPF_Elements"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <GridSplitter Grid.Column="1"  Grid.Row="0" ShowsPreview="False" Width="3"
-        HorizontalAlignment="Center" VerticalAlignment="Stretch" />
-            <GridSplitter Grid.Row="1" Grid.ColumnSpan="3" Height="3"
-        HorizontalAlignment="Stretch" VerticalAlignment="Center" />
-            <Canvas Grid.Column="0" Grid.Row="0">
-                <TextBlock>Левая панель</TextBlock>
-            <ComboBox x:Name="comboBox" Canvas.Left="68.667" Canvas.Top="49.666" Width="120" Height="16.627"/>
-            <ComboBoxItem Content="ComboBoxItem" Canvas.Left="81.333" Canvas.Top="107"/>
-        </Canvas>
-            <Canvas Grid.Column="2" Grid.Row="0" Background="LightGreen">
-                <TextBlock>Правая панель</TextBlock>
-            </Canvas>
-            <Canvas Grid.ColumnSpan="3" Grid.Row="2" Background="#dfffff">
-                <TextBlock Canvas.Left="60">Нижняя панель</TextBlock>
-            </Canvas>
-        </Grid>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="40"/>
+        </Grid.RowDefinitions>
+        <Button x:Name="button" Content="Открыть" Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Click="button_Click"/>
+        <TextBox x:Name="MyTB" Grid.Row="0"/>
+    </Grid>
 </Window>
