--- a/WPF_Elements/MainWindow.xaml
+++ b/WPF_Elements/MainWindow.xaml
@@ -12,6 +12,10 @@
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <Button x:Name="button" Content="Открыть" Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Click="button_Click"/>
-        <TextBox x:Name="MyTB" Grid.Row="0"/>
+        <ScrollViewer>
+        <TextBox x:Name="MyTB" Grid.Row="0" FontSize="{Binding ElementName=sld, Path=Value}"/>
+        </ScrollViewer>
+        <Slider Grid.Row="1" Width="400" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Minimum="1" Maximum="72" Value="12" Name="sld"
+                TickFrequency="5" TickPlacement="BottomRight"></Slider>
     </Grid>
 </Window>
